# P2P-CLI-chat

./: .rustfmt.toml  Cargo.toml  README.md  TESTING.md
src/: cli.rs  cli_main.rs  client.rs  daemon.rs  daemon_main.rs  ipc.rs  lib.rs  main.rs  message.rs  service.rs  types.rs
src/cli/: cmdline.rs  repl.rs
src/client/: daemon_control.rs  error.rs  repl.rs
src/client/daemon_control/: session.rs
src/client/repl/: command_processor.rs
src/daemon/: command_processor.rs  control.rs  error.rs  p2p_service.rs  pidfile.rs  session.rs
src/lib/: cli_schema.rs  error_macro.rs  logger.rs  mod.rs  paths.rs  pid.rs  schemas.rs  socket.rs
src/lib/logger/: error.rs
src/lib/pid/: error.rs
src/lib/socket/: error.rs
