[package]
name = "p2p_cli_chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p2pchat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rustyline = "18.0.0"
shlex = "1.3.0"
nix = { version = "0.30", features = ["process", "fs"] }

[profile.release]
lto = true
