[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p2pchat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rustyline = "18.0.0"
shlex = "1.3.0"
nix = { version = "0.31.2", features = ["signal", "process", "fs"] }
tokio = { version = "1.51.1", features = ["net", "io-util", "macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
iroh = "0.98.1"

[profile.release]
lto = true
